Added true vs predicted with best model

--- a/Pneumonia Detection/Build and train model.ipynb
+++ b/Pneumonia Detection/Build and train model.ipynb
@@ -933,30 +933,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "## Let's look at some examples of true vs. predicted with our best model: \n",
     "\n",
     "# Todo\n",
     "\n",
-    "# fig, m_axs = plt.subplots(10, 10, figsize = (16, 16))\n",
-    "# i = 0\n",
-    "# for (c_x, c_y, c_ax) in zip(valX[0:100], testY[0:100], m_axs.flatten()):\n",
-    "#     c_ax.imshow(c_x[:,:,0], cmap = 'bone')\n",
-    "#     if c_y == 1: \n",
-    "#         if pred_Y[i] > YOUR_THRESHOLD:\n",
-    "#             c_ax.set_title('1, 1')\n",
-    "#         else:\n",
-    "#             c_ax.set_title('1, 0')\n",
-    "#     else:\n",
-    "#         if pred_Y[i] > YOUR_THRESHOLD: \n",
-    "#             c_ax.set_title('0, 1')\n",
-    "#         else:\n",
-    "#             c_ax.set_title('0, 0')\n",
-    "#     c_ax.axis('off')\n",
-    "#     i=i+1"
+    "fig, m_axs = plt.subplots(10, 10, figsize = (16, 16))\n",
+    "i = 0\n",
+    "for (c_x, c_y, c_ax) in zip(valX[0:100], testY[0:100], m_axs.flatten()):\n",
+    "    c_ax.imshow(c_x[:,:,0], cmap = 'bone')\n",
+    "    if c_y == 1:\n",
+    "        if pred_Y[i] > 0.7:\n",
+    "            c_ax.set_title('1, 1')\n",
+    "        else:\n",
+    "            c_ax.set_title('1, 0')\n",
+    "    else:\n",
+    "        if pred_Y[i] > 0.7:\n",
+    "            c_ax.set_title('0, 1')\n",
+    "        else:\n",
+    "            c_ax.set_title('0, 0')\n",
+    "    c_ax.axis('off')\n",
+    "    i=i+1"
    ]
   },
   {
